--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -1,15 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">Agenda</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <% if (!user) { %>
-            <li class="nav-item">
-              <a class="nav-link" href="/login/index">Entrar</a>
-            </li>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Agenda</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
+      aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarToggle">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <% if (!user) { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/login/index">Entrar</a>
+          </li>
           <% } else { %>
             <li class="nav-item">
               <a class="nav-link" href="/contato/index">Criar Contato</a>
@@ -17,8 +18,8 @@
             <li class="nav-item">
               <a class="nav-link" href="/login/logout">Sair</a>
             </li>
-          <% } %>
-        </ul>
-      </div>
+            <% } %>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
