--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,7 +15,7 @@
             <% if (contatos.length> 0) { %>
               <p class="text-center lead">Seus contatos estão abaixo.</p>
 
-              <div class="respnsive-table my-3">
+              <div class="table-responsive my-3">
                 <table class="table table-hover">
                   <thead class="table-dark">
                     <tr>
