--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -6,7 +6,7 @@
     <div class="col-lg-2"></div>
     <div class="col-lg-8 my-3">
       <h1 class="text-center">Criar Conta ou Entrar</h1>
-      <p class="text-center lead">Faça login ou crie dua conta abaixo.</p>
+      <p class="text-center lead">Faça login ou crie sua conta abaixo.</p>
 
       <%- include('includes/messages') %>
 
